--- a/Scripts/styles.css
+++ b/Scripts/styles.css
@@ -12,10 +12,10 @@ p {
     padding: 0;
 }
 
-#cwars {
+#cwars_div {
     border-radius: 25px;
     background-color: dimgrey;
-    width: 80%;
+    width: 70%;
     padding: 1%;
     text-align: center;
 }
@@ -42,7 +42,7 @@ p {
 }
 
 #cwpic {
-    width: 40%;
+    width: 45%;
     border: 1px solid white;
     margin: 1%;
     opacity: 0.5;
