fixed link hover

--- a/Scripts/styles.css
+++ b/Scripts/styles.css
@@ -20,8 +20,12 @@ p {
     text-align: center;
 }
 
+.link_div {
+    text-align: center;
+}
+
 .link {
-    display: block;
+    display: inline;
     color: black;
 }
 
