Added HopToIt and NPGeek

--- a/Scripts/styles.css
+++ b/Scripts/styles.css
@@ -47,13 +47,13 @@ p {
     font-weight: bold;
 }
 
-#cwpic {
+.picture {
     width: 45%;
     border: 1px solid white;
     margin: 1%;
     opacity: 0.5;
 }
 
-    #cwpic:hover {
+    .picture:hover {
         opacity: 1.0;
     }
